pkl-core/src/test/files/LanguageSnippetTests/input/errors/classExtendsSelf.pkl
open class Recurring extends Recurring {

}

f: Recurring = new {}
